# cmc_scraper

./: .gitignore  Cargo.toml  README.md  config.json.ex  config.json.ex 
src/: api.rs  args.rs  config.rs  main.rs
