[package]
name = "cmc_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json","blocking","cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
anyhow = { version = "1.0", default-features = false }
clap = { version = "4.1.8", features = ["derive"] }
